# Federated-Learning

./: README.md
VanillaFL/: pyproject.toml
VanillaFL/VanillaFL/: __init__.py  client_app.py  server_app.py  task.py
