[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "VanillaFL"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.16.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "shikhar"

[tool.flwr.app.components]
serverapp = "VanillaFL.server_app:app"
clientapp = "VanillaFL.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 0.5
local-epochs = 10
num-clients = 5    # WARNING : This value should be equal to options.num-supernodes

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 5
